#128 add to cart button is no longer truncated

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,3 +12,4 @@
   position: absolute;
   bottom: 13px;
   }
+.add_to_cart_box { @extend .caption}
